--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <EditText
+       android:id="@+id/input"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toStartOf="@+id/add"
+       android:hint="@string/what_s_in_your_mind"
+       android:layout_marginTop="16dp"
+       android:layout_marginStart="16dp"
+       android:layout_marginEnd="60dp"
+       android:textSize="18sp"
+       />
 
+   <ImageButton
+       android:id="@+id/add"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="18dp"
+       android:src="@drawable/outline_add_24"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintStart_toEndOf="@+id/input"
+       app:layout_constraintTop_toTopOf="parent" />
+   
+   <androidx.recyclerview.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       app:layout_constraintTop_toBottomOf="@+id/input"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_marginTop="24dp"
+       tools:listitem="@layout/item_note"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
