--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
 
    <ImageButton
        android:id="@+id/add"
+       android:onClick="submitData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
@@ -32,6 +33,7 @@
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
+       android:background="#B39DDB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/input"
