--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
     android:background="#abcdef"
-    tools:viewBindingIgnore="true"
 
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -19,9 +18,8 @@
         app:layout_constraintRight_toLeftOf="@+id/deleteButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text = "Hare Krishna"
         android:textColor="#212121"
-        tools:ignore="MissingConstraints,UnknownId" />
+        android:background="@android:color/holo_orange_light"/>
 
     <ImageButton
         android:background= "@android:color/transparent"
